--- a/src/app/mis-cosas/mis-cosas.component.html
+++ b/src/app/mis-cosas/mis-cosas.component.html
@@ -1,2 +1,16 @@
 <app-cabecera></app-cabecera>
-<p>Mis cosas funciona</p>
+
+<main class="body">
+        <section class="title">
+            <p>Mis Historias</p>
+        </section>
+        <p class="user">Javier Herrero</p>
+        <section class="myPublications">
+                <img src="../assets/user.png" class="iconUser">
+                <p>Esta es la primera Publicación de este usuario</p>
+        </section>
+        <section class="button">
+            <button type="button" class="like">Like</button>
+            <button type="button" class="dislike">Dislike</button>
+        </section>
+</main>
