--- a/src/app/mis-historias/datos-personales/datos-personales.component.html
+++ b/src/app/mis-historias/datos-personales/datos-personales.component.html
@@ -1,3 +1,6 @@
 <section class="datosPersonales">
     <textarea class="textPersonal" name="textarea" cols="30" rows="10"></textarea>
 </section>
+<section class="publish">
+    <button type="button" class="buttonMessage">Send</button>
+</section>
