--- a/src/app/cabecera/cabecera.component.css
+++ b/src/app/cabecera/cabecera.component.css
@@ -1,34 +1,49 @@
 .title{
-    color: darkslategrey;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	color: darkslategrey;
 }
 
 .buttonMenu{
-    box-shadow:inset 0px 1px 0px 0px #3dc21b;
-	background:linear-gradient(to bottom, #44c767 5%, #b3db15 100%);
-	background-color: gre;
+	background:linear-gradient(to bottom, orangered 5%, orangered 100%);
+	background-color: orangered;
 	border-radius:6px;
-	border:1px solid #18ab29;
 	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
+	color: white;
+	font-family: 'Times New Roman', Times, serif;
+	font-size:1em;
 	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
+	margin-left: 1%;
 }
 .header{
-    padding-left: 35%;
-    padding-right: 35%;
-    margin-top: 1%;
-    margin-left: 2%;
-    margin-right: 2%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
 
 .logo{
-    transform: rotate(-180deg);
-    width: 100%;
-    margin-top: 30%;
-    margin-right: 25%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	transform: rotate(-180deg);
+	width: 2%;
+}
+
+.user{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-right: 20%;
+	margin-top: 1%;
+}
+
+.iconUser{
+	width: 10%;
+}
+
+.name{
+	font-family: 'Times New Roman', Times, serif;
+	font-weight: bold;
+	font-size: 2em;
 }
