--- a/src/app/cabecera/cabecera.component.html
+++ b/src/app/cabecera/cabecera.component.html
@@ -1,10 +1,13 @@
-<section class="header">
-    <h2 class="title">Welcome to Social EOI</h2>
-    <table class="tableButton">
-      <td><img src="../assets/twitter.png" class="logo"></td>
-      <td><button routerLink="/home" routerLinkActive="active"  type="button" class="buttonMenu">Mis Historietas</button></td>
-      <td><button routerLink="/mis-cosas" routerLinkActive="active" type="button" class="buttonMenu">Mis Cosas</button></td>
-      <td><button routerLink="/mis-amigos" routerLinkActive="active" type="button" class="buttonMenu">Mis Amigos</button></td>
-      <td><button routerLink="/eventos" routerLinkActive="active" type="button" class="buttonMenu">Eventos</button></td>
-    </table>
+<h2 class="title">Welcome to Social EOI</h2>
+<nav class="header">
+  <img src="../assets/twitter.png" class="logo">
+  <button routerLink="/home" routerLinkActive="active"  type="button" class="buttonMenu">Mis Historietas</button>
+  <button routerLink="/mis-cosas" routerLinkActive="active" type="button" class="buttonMenu">Mis Cosas</button>
+  <button routerLink="/mis-amigos" routerLinkActive="active" type="button" class="buttonMenu">Mis Amigos</button>
+  <button routerLink="/eventos" routerLinkActive="active" type="button" class="buttonMenu">Eventos</button>
+</nav>
+
+<section class="user">
+  <img src="../assets/user.png" class="iconUser">
+  <p class="name">Herrero <br> Javier</p>
 </section>
