--- a/src/app/mis-historias/datos-personales/datos-personales.component.css
+++ b/src/app/mis-historias/datos-personales/datos-personales.component.css
@@ -1,9 +1,20 @@
+.datosPersonales{
+    margin-top: 1%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .textPersonal{
-    width: 80%;
+    width: 60%;
     height: 100px;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 2%;
     font-size: medium;
     font-family: 'Times New Roman', Times, serif;
+}
+
+.publish{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 20%;
 }
